# MorphMesh

./: CMakeLists.txt  main.cpp
data/: brick.dmat  brick.mesh  fingerPoints.txt
